<resources>
    <string name="app_name">DIAGNÓSTICO DE ENFERMEDADES</string>
    <string name="welcome">Bienvenido</string>
    <string name="next"><b>Continuar  </b></string>
    <string name="welcome_text">
        Esta es una aplicación para realizar un chequeo médico breve acerca de enfermedades comunes en la región, sus respuestas se mantendrán anónimas.
        Sus respuestas serán analizadas y le dirá las posibles causas de los sintomas. Recuerde que:
    </string>
    <string name="list1_welcome">• El chequeo es de caracter informativo y no constituye una opinión médica.</string>
    <string name="list2_welcome">• <b>No usar en un caso de emergencia.</b> En un caso de emergencia, llame al número de emergencia local.</string>
    <string name="list3_welcome">• <b>Sus datos están a salvo.</b> La información que usted proporcione será anónima y no será compartida con nadie.</string>
    <string name="user_data">Datos del paciente</string>
    <string name="select_gender">Por favor, seleccione su género:</string>
    <string name="man">Hombre</string>
    <string name="woman">Mujer</string>
    <string name="put_age">Por favor, introduzca su edad:</string>
    <string name="put_height">Por favor, introduzca su estatura:</string>
    <string name="put_weight">Por favor, introduzca su peso:</string>
    <string name="diagnosis"><b>Iniciar diagnóstico  </b></string>
    <string name="diagnosist">Por favor, ingrese sus síntomas:</string>
    <string name="question">¿Tiene alguno de los siguientes síntomas?</string>
    <string name="symptom">Ingrese un sintoma</string>
    <string name="ssymptom">Seleccione un sintoma</string>
    <string name="pre_diagnosis">Posibles enfermedades</string>
</resources>