<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.QuestionsActivity"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/app_name" />

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    android:text="@string/app_name"/>
                <View
                    android:layout_marginEnd="45dp"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#FFF"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/welcome"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10sp"
                        android:layout_marginRight="10sp"
                        android:justificationMode="inter_word"
                        android:text="@string/welcome_text"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:ignore="UnusedAttribute"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15sp"
                        android:layout_marginRight="15sp"
                        android:justificationMode="inter_word"
                        android:text="@string/list1_welcome"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:ignore="UnusedAttribute" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15sp"
                        android:layout_marginRight="15sp"
                        android:justificationMode="inter_word"
                        android:text="@string/list2_welcome"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:ignore="UnusedAttribute" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15sp"
                        android:layout_marginRight="15sp"
                        android:justificationMode="inter_word"
                        android:text="@string/list3_welcome"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        tools:ignore="UnusedAttribute" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:textSize="15sp"
                            android:textColor="@color/black"/>
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/next"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:gravity="center"
                            tools:ignore="UseCompoundDrawables,UselessParent">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:text="@string/next"
                                android:textColor="@color/black"
                                android:textSize="18sp"/>
                            <ImageView
                                android:gravity="center"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:src="@drawable/next"
                                tools:ignore="ContentDescription" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>