<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.QuestionsActivity"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/logo"
                android:contentDescription="@string/app_name" />

            <LinearLayout
                android:orientation="vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#FFF"
                    android:textSize="25sp"
                    android:text="@string/app_name"/>
                <View
                    android:layout_marginEnd="45dp"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="#FFF"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/diagnosist"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_margin="4dp"
            android:background="@drawable/style_border"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/uno"
                    android:contentDescription="@string/symptom"/>
                <AutoCompleteTextView
                    android:hint="@string/symptom"
                    android:completionHint="@string/ssymptom"
                    android:completionThreshold="1"
                    android:layout_gravity="center"
                    android:id="@+id/symptom1"
                    android:singleLine="true"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:popupBackground="@color/teal_200"
                    android:inputType="text" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lsymp2"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/dos"
                    android:contentDescription="@string/symptom"/>
                <AutoCompleteTextView
                    android:hint="@string/symptom"
                    android:completionHint="@string/ssymptom"
                    android:completionThreshold="1"
                    android:layout_gravity="center"
                    android:id="@+id/symptom2"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:popupBackground="@color/teal_200"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lsymp3"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/tres"
                    android:contentDescription="@string/symptom"/>
                <AutoCompleteTextView
                    android:hint="@string/symptom"
                    android:completionHint="@string/ssymptom"
                    android:completionThreshold="1"
                    android:layout_gravity="center"
                    android:id="@+id/symptom3"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:popupBackground="@color/teal_200"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lsymp4"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/cuatro"
                    android:contentDescription="@string/symptom"/>
                <AutoCompleteTextView
                    android:hint="@string/symptom"
                    android:completionHint="@string/ssymptom"
                    android:completionThreshold="1"
                    android:layout_gravity="center"
                    android:id="@+id/symptom4"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:popupBackground="@color/teal_200"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lsymp5"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/cinco"
                    android:contentDescription="@string/symptom"/>
                <AutoCompleteTextView
                    android:hint="@string/symptom"
                    android:completionHint="@string/ssymptom"
                    android:completionThreshold="1"
                    android:layout_gravity="center"
                    android:id="@+id/symptom5"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:popupBackground="@color/teal_200"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lsymp6"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/seis"
                    android:contentDescription="@string/symptom"/>
                <AutoCompleteTextView
                    android:hint="@string/symptom"
                    android:completionHint="@string/ssymptom"
                    android:completionThreshold="1"
                    android:layout_gravity="center"
                    android:id="@+id/symptom6"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:popupBackground="@color/teal_200"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/lsymp7"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal">
                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/siete"
                    android:contentDescription="@string/symptom"/>
                <AutoCompleteTextView
                    android:hint="@string/symptom"
                    android:completionHint="@string/ssymptom"
                    android:completionThreshold="1"
                    android:layout_gravity="center"
                    android:id="@+id/symptom7"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:popupBackground="@color/teal_200"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <LinearLayout
                android:id="@+id/add_symptom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/mas"
                    tools:ignore="ContentDescription" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/delete_symptom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/menos"
                    tools:ignore="ContentDescription" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_weight="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/next"
                        android:textColor="@color/black"
                        android:textSize="15sp"/>
                    <ImageView
                        android:gravity="center"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/next"
                        android:contentDescription="@string/next"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>